logs/enumerator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.3.egg-info'...
Listing './lib/python3.5/site-packages/enumerator'...
Listing './lib/python3.5/site-packages/enumerator/lib'...
Listing './lib/python3.5/site-packages/enumerator/lib/ftp'...
Listing './lib/python3.5/site-packages/enumerator/lib/http'...
Listing './lib/python3.5/site-packages/enumerator/lib/nbt'...
Compiling './lib/python3.5/site-packages/enumerator/lib/nmap.py'...
***   File "./lib/python3.5/site-packages/enumerator/lib/nmap.py", line 114
    print '   [-] nmap: running TCP & UDP scans for host: %s' % ip
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/enumerator/lib/process_manager.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (process_manager.py, line 29)
Listing './lib/python3.5/site-packages/enumerator/lib/rpc'...
Listing './lib/python3.5/site-packages/enumerator/lib/ssh'...
Listing './lib/python3.5/site-packages/enumerator-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
